bug fix : FIX misalignment in tagger-collection-details. change from div to table.

--- a/aidr-manager/src/main/webapp/resources/css/style.css
+++ b/aidr-manager/src/main/webapp/resources/css/style.css
@@ -191,6 +191,12 @@ table{
 	border-collapse: collapse;
 }
 
+td, th {
+    display: table-cell;
+    vertical-align: inherit;
+    padding: 3px;
+}
+
 h1,h2,h3,h4,h5,h6{
 	font-weight: normal;
 }
